# Payment-Gateway

./: .gitignore  CMakeLists.txt  main.cpp
include/: Database.h  Encryption.h  Server.h  transaction.h
src/: Database.cpp  Encryption.cpp  Server.cpp  transactionHandler.cpp
